--- a/src/main/webapp/iframe_pick_room3.html
+++ b/src/main/webapp/iframe_pick_room3.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>预约选房</title>
+    <title>预约选房/房间</title>
     <script src="js/loadcss.js" type="text/javascript" charset="utf-8"></script>
 </head>
 <body style="width: 800px;background: #eee;">
@@ -48,15 +48,16 @@
 		<section style="height: 50px;"></section>
 		<section style="padding: 20px;position: absolute;bottom: 0px;right: 0px;">
 					<button class="layui-btn layui-btn-normal" onclick="yes();">确定</button>
-					<button class="layui-btn layui-btn-warm" onclick="no();">取消</button>
+					<button class="layui-btn layui-btn-warm" onclick="no();">关闭</button>
 		</section>
 		
 		
    
 <script src="js/loadjs.js" type="text/javascript" charset="utf-8"></script>
 <script>
-		var $,element,$b,$remove,seleted=parent.sRooms,allRoom,getSel=[];
+		var $,element,$b,$remove,seleted=parent.sRooms1,allRoom,getSel=[];
         var downSelected = [];
+        var yyxf  =  JSON.parse(localStorage.yyxf);
     layui.use(['element', 'jquery', 'table'], function () {
         element = layui.element,
         $ = jQuery = layui.$;
@@ -68,20 +69,9 @@
 				$doc.on("click","#typeList p",function(){
 					$("#typeList p").removeClass("room-type-selected");
 					$(this).addClass("room-type-selected");
-					var par = "?v=1";
-					if($(this).data("id")){
-					    par+="&houseTypeId="+$(this).data("id")
-					}
-					if(getUrl("timeRoomResult"))par+="&timeRoomResult="+getUrl("timeRoomResult")
-                    if(getUrl("freeId"))par+="&freeId="+getUrl("freeId")
-                    if(getUrl("endTime"))par+="&endTime="+getUrl("endTime").replace(/-/, "/").replace(/-/, "/")
-                    if(getUrl("startTime"))par+="&startTime="+getUrl("startTime").replace(/-/, "/").replace(/-/, "/")
-                    if(getUrl("cnId"))par+="&cnId="+getUrl("cnId")
-                    if(getUrl("dayNumber"))par+="&dayNumber="+getUrl("dayNumber")
-                    if(getUrl("hourNumber"))par+="&hourNumber="+getUrl("hourNumber")
-                    if(getUrl("channel"))par+="&channel="+getUrl("channel")
-                    if(getUrl("memberRankId"))par+="&memberRankId="+getUrl("memberRankId")
-                    dealHouse(par);
+
+					//点击房型处理数据///根据房型id查询过滤房间数据
+                    dealHouse($(this).data("id"));//参数是房型id
 				})
 				$doc.on("click",".pick-jf",function(){
 					var _d = findRoomById($(this).data("id"));
@@ -105,42 +95,30 @@
 						dealSel(_d);
 					}
 				})
-				var _urll = api.getHouseType+"?v=1";
-				if(getUrl("timeRoomResult"))_urll+="&timeRoomResult="+getUrl("timeRoomResult")
-				if(getUrl("freeId"))_urll+="&freeId="+getUrl("freeId")
-				if(getUrl("endTime"))_urll+="&endTime="+getUrl("endTime").replace(/-/, "/").replace(/-/, "/")
-				if(getUrl("startTime"))_urll+="&startTime="+getUrl("startTime").replace(/-/, "/").replace(/-/, "/")
-				if(getUrl("cnId"))_urll+="&cnId="+getUrl("cnId")
-				if(getUrl("dayNumber"))_urll+="&dayNumber="+getUrl("dayNumber")
-				if(getUrl("hourNumber"))_urll+="&hourNumber="+getUrl("hourNumber")
-                if(getUrl("channel"))_urll+="&channel="+getUrl("channel")
-               if(getUrl("memberRankId"))_urll+="&memberRankId="+getUrl("memberRankId")
-				$.getJSON(_urll+"&random="+Date.now(),function (rs) {
-					var $typeList = $("#typeList");
-					var str = '<p class="room-type-selected">不限</p>';
-                    $typeList.empty();
-					try{
-						var r = rs.data;
-						for(var i=0;i<r.length;i++){
-                            str+='<p data-id="'+r[i].id+'">'+r[i].name+'（'+r[i].count+'）</p>'
+
+				//查询房间类型
+				$.ajax({
+					url: "room/queryRoomTypeNum",
+					type: 'post',
+					dataType: "json",
+					data:JSON.parse(localStorage.yyxf),
+					success: function (rs) {
+						var $typeList = $("#typeList");
+						var str = '<p class="room-type-selected">不限</p>';
+						$typeList.empty();
+						try{
+							var r = rs.data;
+							for(var i=0;i<r.length;i++){
+								str+='<p data-id="'+r[i].id+'">'+r[i].name+'（'+r[i].count+'）</p>'
+							}
+							$typeList.append(str);
+						}catch(err){
+							alert(err);
 						}
-                        $typeList.append(str);
-					}catch(err){
-						alert(err);
 					}
 				})
 
-				var par = "?v=1";
-				if(getUrl("timeRoomResult"))par+="&timeRoomResult="+getUrl("timeRoomResult")
-				if(getUrl("freeId"))par+="&freeId="+getUrl("freeId")
-       			if(getUrl("endTime"))par+="&endTime="+getUrl("endTime").replace(/-/, "/").replace(/-/, "/")
-       			if(getUrl("startTime"))par+="&startTime="+getUrl("startTime").replace(/-/, "/").replace(/-/, "/")
-        		if(getUrl("cnId"))par+="&cnId="+getUrl("cnId")
-				if(getUrl("dayNumber"))par+="&dayNumber="+getUrl("dayNumber")
-				if(getUrl("hourNumber"))par+="&hourNumber="+getUrl("hourNumber")
-                if(getUrl("channel"))par+="&channel="+getUrl("channel")
-                if(getUrl("memberRankId"))par+="&memberRankId="+getUrl("memberRankId")
-        		dealHouse(par)
+        		dealHouse()
 				dealReShow();
 
 
@@ -151,52 +129,63 @@
 			no();
 		}
 
-		function dealHouse(par) {
-		    var urll = api.pickRoomQuery+par;
+		function dealHouse(typeid) {
+		    var par = JSON.parse(JSON.stringify(yyxf));
+		    if(typeid){
+                par.roomTypeId = typeid;
+			}
             var index = layer.load(1,{time:10*1000});
-            $.getJSON(urll+"&random="+Date.now(),function (rs) {
-                layer.close(index);
-                var d  = rs.data;
-                allRoom = d;
-                d = d.sort(compare("floorId"));
-                var t = madeArr(d);
-                var $houseList = $("#houseList");
-                var str = '';
-                $houseList.empty();
-                try{
-                    // var r = rs.data;
-                    for(var i=0;i<t.length;i++){
+            $.ajax({
+                url: api.pickRoomQuery,
+                type: 'post',
+                dataType: "json",
+                data:par,
+                success: function (rs) {
+                    layer.close(index);
 
-                        str+=['<div class="prc-row">',
-								'<p>',
-								t[i][0].hotelName,
-								'</p>',
-								'<p>',
-								t[i][0].floorName,
-								'</p>',
-                            '	<div>'].join("");
-                        var aa = t[i];
-                        t[i] = aa.sort(compare("roomNum"));
+                    var t = allRoom = rs.data;
 
-                        for(var j=0;j<t[i].length;j++){
-                            // console.info(t[i][j])
-                            str+=['<span data-id="',
-                                t[i][j].roomId,
-								'" class="',
-								checkSel(t[i][j]),
-								' pick-fj ',
-                                getState(t[i][j].state),
-								'">',
-                                t[i][j].roomNum,
-								'</span>'].join("")
-						}
-                        str+="</div></div>";
+                    // d = d.sort(compare("floorId"));
+                    // var t = madeArr(d);
+                    var $houseList = $("#houseList");
+                    var str = '';
+                    $houseList.empty();
+                    try {
+                        // var r = rs.data;
+                        for (var i = 0; i < t.length; i++) {
+							if(t[i].length==0)continue;
+                            str += ['<div class="prc-row">',
+                                '<p>',
+                                t[i][0].hotelName,
+                                '</p>',
+                                '<p>',
+                                t[i][0].floorName,
+                                '</p>',
+                                '	<div>'].join("");
+                            var aa = t[i];
+                            t[i] = aa.sort(compare("roomName"));
+
+                            for (var j = 0; j < t[i].length; j++) {
+                                // console.info(t[i][j])
+                                str += ['<span data-id="',
+                                    t[i][j].id,
+                                    '" class="',
+                                    checkSel(t[i][j]),
+                                    ' pick-fj ',
+                                    getState(t[i][j].roomMajorState),
+                                    '">',
+                                    t[i][j].roomName,
+                                    '</span>'].join("")
+                            }
+                            str += "</div></div>";
+                        }
+
+                        $houseList.append(str);
+                    } catch (err) {
+                        // alert(err);
+                        console.log(err)
+
                     }
-
-                    $houseList.append(str);
-                }catch(err){
-                    alert(err);
-
                 }
             })
         }
@@ -218,37 +207,38 @@
 
         function getState(v) {
 		    // console.log(getUrl("vv"))
-			if(v==1)return ' pick-jf';
-			if(v==4)return ' pick-ylf';
-			if(getUrl("vv")&&v==3) return ' pick-jf';
+			if(v=='vacant'||v=='inthe'||v=='timeout')return ' pick-jf';//房间主状态 vacant 空房 inthe在住 timeout超时 dirty脏房
+			// if(v==4)return ' pick-ylf';
+			// if(getUrl("vv")&&v==3) return ' pick-jf';
 			return ' pick-zf'
         }
 
         function dealSel(d,flag) {
 		    // 处理选择房间
 		    var str = '';
+
 		    if(flag){
                 if(checkTypeByReShow(d)){
-                    $("#houseType"+d.houseTypeId).append( '<span class="pick-fj pick-selected" id="roomId'+d.roomId+'">'+d.roomNum+'</span>');
+                    $("#houseType"+d.roomTypeId).append( '<span class="pick-fj pick-selected" id="id'+d.id+'">'+d.roomName+'</span>');
                     // debugger;
-                    $("#selNum"+d.houseTypeId).text($("#houseType"+d.houseTypeId).find("span").length)
+                    $("#selNum"+d.roomTypeId).text($("#houseType"+d.roomTypeId).find("span").length)
                 }else{
                     $("#selList").append([ '<div class="prc-row" id="houseWP',
-                        d.houseTypeId,
+                        d.roomTypeId,
                         '">',
                         '<p class="pick-room-type-sel">',
-                        d.roomTypeName,
+                        d.roomType,
                         '</p>',
                         '<p id="selNum',
-                        d.houseTypeId,
+                        d.roomTypeId,
                         '">1</p>',
                         '<div id="houseType',
-                        d.houseTypeId,
+                        d.roomTypeId,
                         '">',
-                        '<span class="pick-fj pick-selected" id="roomId',
-                        d.roomId,
+                        '<span class="pick-fj pick-selected" id="id',
+                        d.id,
                         '">',
-                        d.roomNum,
+                        d.roomName,
                         '</span></div></div>'].join(""));
                 }
 
@@ -257,26 +247,26 @@
 
 
 				if(checkType(d)){
-					$("#houseType"+d.houseTypeId).append( '<span class="pick-fj pick-selected" id="roomId'+d.roomId+'">'+d.roomNum+'</span>');
+					$("#houseType"+d.roomTypeId).append( '<span class="pick-fj pick-selected" id="id'+d.id+'">'+d.roomName+'</span>');
 					// debugger;
-					$("#selNum"+d.houseTypeId).text($("#houseType"+d.houseTypeId).find("span").length)
+					$("#selNum"+d.roomTypeId).text($("#houseType"+d.roomTypeId).find("span").length)
 				}else{
 					$("#selList").append([ '<div class="prc-row" id="houseWP',
-						d.houseTypeId,
+						d.roomTypeId,
 						'">',
 						'<p class="pick-room-type-sel">',
-						d.roomTypeName,
+						d.roomType,
 						'</p>',
 						'<p id="selNum',
-						d.houseTypeId,
+						d.roomTypeId,
 						'">1</p>',
 						'<div id="houseType',
-						d.houseTypeId,
+						d.roomTypeId,
 						'">',
-						'<span class="pick-fj pick-selected" id="roomId',
-						d.roomId,
+						'<span class="pick-fj pick-selected" id="id',
+						d.id,
 						'">',
-						d.roomNum,
+						d.roomName,
 						'</span></div></div>'].join(""));
 
 				}
@@ -286,9 +276,10 @@
 
         }
         function findRoomById(id) {
-		    for(var i=0;i<allRoom.length;i++){
-		        if(id==allRoom[i].roomId){
-		            return allRoom[i];
+		    var ttt =  [].concat.apply([],allRoom);
+		    for(var i=0;i<ttt.length;i++){
+		        if(id==ttt[i].id){
+		            return ttt[i];
 				}
 			}
         }
@@ -296,7 +287,7 @@
         function checkType(d) {
             var flag = false;
 			for(var i=0;i<seleted.length;i++){
-                if(seleted[i].houseTypeId == d.houseTypeId) {
+                if(seleted[i].roomTypeId == d.roomTypeId) {
                     flag = true;
                     break;
                 }
@@ -306,7 +297,7 @@
         function dealUnSel(d) {//处理取消选择
             for(var i=0;i<seleted.length;i++){
                 // for(var j=0;j<seleted[i].length;j++){
-                    if(seleted[i].roomId == d.roomId) {
+                    if(seleted[i].id == d.id) {
 						seleted.splice(i,1);
                         dealReShow();
 						break;
@@ -317,7 +308,7 @@
         function checkSel(d) {
             var dd = [].concat.apply([],seleted);
             for(var i=0;i<dd.length;i++){
-                    if(dd[i].roomId == d.roomId) {
+                    if(dd[i].id == d.id) {
                         return "pick-jf-selected";
                         break;
                     }
@@ -329,7 +320,7 @@
           	$("#selList").empty();
             tempSel = [];
             if(!d.length)return;
-            if(d[0].roomId==0){
+            if(d[0].id==0){
                 seleted = [];
                 return;
 			}
@@ -344,7 +335,7 @@
 			console.info(tempSel)
 			var flag = false;
             for(var i=0;i<tempSel.length;i++){
-				if(tempSel[i].houseTypeId == d.houseTypeId) {
+				if(tempSel[i].roomTypeId == d.roomTypeId) {
                     flag = true;
                     break;
 				}
